Version 0.8.4~dev

	* Fix race condition which causes double/triple logging output,
	  closes: #3532.

Version 0.8.3 Released on 2010/07/07

	* Add a SJConf plugin, closes: #3304.

Version 0.8.2 Released on 2010/07/02

	* sample: plugin updated with new API, closes: #2984.
	* sample: add alternate plugin using getattr.
	* Change logrotate options for rotating daily and keep 30 days of logs,
	  closes: #3147.
	* basejob: Protected code against null values.
	* basejob: fix crash on first run of a specific job
	* Remove: spv-data.

Version 0.8.1 Released on 2010/05/17

	* Move status infos in old_status_infos variable to avoid having to
	  always push all status infos to spv webservices when check is
	  complete.

Version 0.8.0 Released on 2010/05/12

	* Added 'limit_group' and 'limit_check' parameter to allow multiple
	  instances of spvd to work on identical DB but different groups and
	  checks.
	* Limit number of results to commit at the same time (default 50).
	  Configration value is 'limit_commit'.
	* Allow to limit plugins to several groups.
	* Save history only when job is finished and new status differs from
	  previously saved status.
	* Overhaul logging in BaseJob and BasePlugin to reduce file descriptor
	  usage and fix "broken" log output, closes: #3057.

Version 0.7.0 Released on 2010/04/21

	* Added error message if plugin imports fail in the configuration parser, closes: #2820.
	* Changed 'logfile' parameter to 'logdir' since spvd uses multiple log files, refs: #2843.
	* Changed API to be more concise and flexible, refs: #2900.
	* Fixed log output in --no-daemon mode, closes: #2843.
	* Check for txt2tags and sed in configure.
	* Fix SQL schema (SQL syntax errors, missing permission queries)
	* Prevent spvd from quitting if no plugins are configured.
	* Fixed wrong permission on log file, closes: #2085.
	* Fixed use of unitialized class member 'name', closes: #2986.
	* Using new webengine-spv get_checks parameter :  get_detailed_infos.