@@ -2,6 +2,7 @@ Version 0.8.4~dev
 
 	* Fix race condition which causes double/triple logging output,
 	  closes: #3532.
+	* sjconf: read all [spvd:*] sections, not just [spvd].
 
 Version 0.8.3 Released on 2010/07/07
 
